[gd_scene load_steps=5 format=3 uid="uid://0qo2puvcqplj"]

[ext_resource type="Texture2D" uid="uid://bvtaty25441dk" path="res://Assets/Sprites/Cards/Aseprite/Cardbodies/Herz.png" id="1_h2gyk"]
[ext_resource type="Script" path="res://Scenes/Games/Utility/Kartenstapel/Karten/karte.gd" id="1_ioxos"]
[ext_resource type="Theme" uid="uid://cito1govxoc1f" path="res://Assets/Themes/Text/cardcontent_outer.tres" id="3_b5jlt"]
[ext_resource type="Theme" uid="uid://dvy8ih3o1kpsu" path="res://Assets/Themes/Text/cardcontent_inner.tres" id="3_h3x04"]

[node name="Karte" type="TextureRect"]
offset_right = 240.0
offset_bottom = 432.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_h2gyk")
script = ExtResource("1_ioxos")

[node name="OuterNumberAnchor" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 240.0
offset_bottom = 432.0
mouse_filter = 1
metadata/_edit_lock_ = true

[node name="LeftUpperCorner" type="Label" parent="OuterNumberAnchor"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 38.0
offset_bottom = 32.0
theme = ExtResource("3_b5jlt")
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="RightUpperCorner" type="Label" parent="OuterNumberAnchor"]
layout_mode = 0
offset_left = 202.0
offset_top = 2.0
offset_right = 238.0
offset_bottom = 32.0
theme = ExtResource("3_b5jlt")
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="LeftLowerCorner" type="Label" parent="OuterNumberAnchor"]
layout_mode = 0
offset_left = 38.0
offset_top = 430.0
offset_right = 74.0
offset_bottom = 460.0
rotation = 3.14159
theme = ExtResource("3_b5jlt")
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="RightLowerCorner" type="Label" parent="OuterNumberAnchor"]
layout_mode = 0
offset_left = 238.0
offset_top = 430.0
offset_right = 274.0
offset_bottom = 460.0
rotation = 3.14159
theme = ExtResource("3_b5jlt")
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="InnerNumberAnchor" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 34.0
offset_top = 32.0
offset_right = 206.0
offset_bottom = 400.0
mouse_filter = 1
metadata/_edit_lock_ = true

[node name="Upper" type="Label" parent="InnerNumberAnchor"]
layout_mode = 0
offset_right = 86.0
offset_bottom = 184.0
theme = ExtResource("3_h3x04")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Lower" type="Label" parent="InnerNumberAnchor"]
layout_mode = 0
offset_left = 172.0
offset_top = 368.0
offset_right = 258.0
offset_bottom = 552.0
rotation = 3.14159
theme = ExtResource("3_h3x04")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="Highlighter" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
layout_mode = 0
offset_left = -3.0
offset_top = -3.0
offset_right = 243.0
offset_bottom = 435.0
mouse_filter = 1
color = Color(1, 0.843137, 0, 1)
metadata/_edit_lock_ = true
